--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"XiaoZhu\\rabbitXzBundle\\" : ""
+			"XiaoZhu\\RabbitXzBundle\\" : ""
 		},
 		"exclude-from-classmap" : [
 			"/Tests/"
